Refactor LogoutClick method; update logout navigation to use relative logout endpoint with redirect URI

--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -254,9 +254,8 @@
 
     private void LogoutClick()
     {
-        var api = "https://vss-backend-api-fmbjgachhph9byce.westus2-01.azurewebsites.net";
-        var returnUrl = Uri.EscapeDataString(NavigationManager.Uri);
-        NavigationManager.NavigateTo($"{api}/Account/Logout?returnUrl={returnUrl}", true);
+        var redirectUri = Uri.EscapeDataString("/landing");
+        NavigationManager.NavigateTo($"authentication/logout?redirectUri={redirectUri}", forceLoad: true);
     }
 
     public void Dispose()
