Refactor LogoutClick method; simplify redirect URI handling in logout navigation

--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -254,8 +254,7 @@
 
     private void LogoutClick()
     {
-        var redirectUri = Uri.EscapeDataString("/landing");
-        NavigationManager.NavigateTo($"authentication/logout?redirectUri={redirectUri}", forceLoad: true);
+        NavigationManager.NavigateTo("authentication/logout?redirectUri=/landing",  /*forceLoad*/ true);
     }
 
     public void Dispose()
