Update LogoutClick method to use current URI as returnUrl

--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -234,7 +234,7 @@
 
     private void LogoutClick()
     {
-        var returnUrl = Uri.EscapeDataString("/landing");
+        var returnUrl = Uri.EscapeDataString(NavigationManager.Uri);
         NavigationManager.NavigateTo($"{ApiBaseUrl}/Account/Logout?returnUrl={returnUrl}", true);
     }
 
